From version 0.2.2 to 0.2.3
- default autoloading of available plugins.
- spec split to externalize plugins.

From version 0.2.1 to 0.2.2
- introduction of cgi control interface.
- server "state" support and use of state.xml config to set state properties.
- spec file for building RPM.
- build support for normal daemon operation.

From version 0.2.0 to 0.2.1
- integrated debug/memleak detection, used to start gdb or valgrind for
  ".libs/lt-sipw" when started with libtool "wrapper" scripts in build area.
- fix for avahi detection in configure

From version 0.1.2 to 0.2.0
- plugin support, zeroconf and scripting plugins added

From version 0.1.1 to 0.1.2
- more and better crypto library detection support.
- busy handling at initial call connection fixed.

From version 0.1.0 to 0.1.1
- introduction of "system" and "anon" user identifiers.
- support for generating sms messages to ua's from the control interface.
- outbound/external uri dialing support, authentication needs to be added.
- mingw32 target build of utils.

Initial Release 0.1.0
	