@@ -10,11 +10,10 @@
 
 AC_INIT(autogen.sh)
 
-VERSION="0.2.2"
-LT_RELEASE="0.2"
-LT_VERSION="0:2"
+VERSION="0.2.3"
+LT_VERSION="0:3:0"
 
-UCOMMON_REQUIRES="1.9.3"
+UCOMMON_REQUIRES="1.9.5"
 
 AC_CONFIG_AUX_DIR(autoconf)
 AC_CANONICAL_SYSTEM
@@ -28,13 +27,8 @@ AM_INIT_AUTOMAKE(sipwitch, [$VERSION])
 AM_CONFIG_HEADER(config.h)
 
 LT_MAJOR="`echo $LT_VERSION | sed s/:.*$//`"
-LT_MINOR="`echo $LT_VERSION | sed s/.*://`"
-LT_SUBVER="$LT_MAJOR.$LT_MINOR"
-AC_SUBST(LT_RELEASE)
 AC_SUBST(LT_VERSION)
-AC_SUBST(LT_SUBVER)
 AC_SUBST(LT_MAJOR)
-AC_SUBST(LT_MINOR)
 
 if test -z "$PKG_CONFIG_PATH" ; then
 	case "$prefix" in
